<resources>
    <string name="app_name">Recipe-App</string>
    <string name="welcome_to_reciipiie">Welcome to \n<b>Rec</b>ii<b>p</b>ii<b>e</b></string>
    <string name="please_signin_to_continue">Please signin to continue</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="hey_user">👋 Hey User</string>
    <string name="discover_tasty_and_healthy_receipt">Discover tasty and healthy receipt</string>
    <string name="popular_recipes">Popular Recipes</string>
    <string name="all_recipes">All Recipes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite_recipes">Favourite recipes</string>
    <string name="onion">Onion</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="quick_summary">Quick Summary</string>
    <string name="equipments">Equipments</string>
    <string name="nutrition">Nutrition</string>
    <string name="bad_for_health_nutrition">Bad for health nutrition</string>
    <string name="good_for_health_nutrition">Good for health nutrition</string>
    <string name="search_any_recipe">Search any recipe</string>
    <string name="previous_fragment">previous_fragment</string>
    <string name="shahi_paneer">Shahi Paneer</string>
    <string name="favourites">favourites</string>
    <string name="get_ingredients">Get ingredients</string>
    <string name="button_text">button_text</string>
    <string name="get_full_recipie">Get full recipie</string>
    <string name="full_recipe">Full recipe</string>
    <string name="get_similar_recipe">Get similar recipe</string>
    <string name="similar_recipes">Similar recipes</string>
</resources>