<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    tools:context=".network.DishOverview">

    <LinearLayout
        android:id="@+id/dishOverview"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/previous_fragment"
            android:scaleType="centerCrop"
            android:src="@drawable/dish_overview_arrow" />

        <TextView
            android:id="@+id/imgTitle_dishOverview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:gravity="center_vertical"
            android:lineHeight="24sp"
            android:padding="0dp"
            android:text="@string/shahi_paneer"
            android:textColor="#171B21"
            android:textFontWeight="500"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/favourites_dishOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/favourites"
            android:scaleType="centerCrop"
            android:src="@drawable/heart_empty" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/nutrition_ll"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:id="@+id/nutrition_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:lineHeight="24sp"
            android:text="@string/ingredients"
            android:textColor="#171B21"
            android:textFontWeight="500"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/nutrition_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/previous_fragment"
            android:src="@drawable/arrow_down" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_dishoverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/btn_ingredients_dishoverview"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_full_recipie"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/button_text"
            android:src="@drawable/keyboard_arrow_right" />
    </LinearLayout>

</LinearLayout>