<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_img"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:text="@string/welcome_to_reciipiie"
        android:fontFamily="@font/inter_medium"
        android:textSize="56sp"
        android:textStyle="italic"
        android:letterSpacing="-0.025"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/please_signIn"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/please_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/please_signin_to_continue"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"/>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/login_btn"
        app:backgroundTint="#E54900"
        android:text="@string/continue_with_google"
        android:textColor="#FFFFFF"
        app:icon="@drawable/coolicon"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>