<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".similar_recipe_dishoverview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/dishOverview"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/back_arrow"
            android:contentDescription="@string/previous_fragment"
            android:src="@drawable/dish_overview_arrow"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/shahi_paneer"
            android:id="@+id/imgTitle_dishOverview"
            android:textColor="#171B21"
            android:fontFamily="@font/inter_medium"
            android:textSize="18sp"
            android:textFontWeight="500"
            android:lineHeight="24sp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"/>

        <ImageView
            android:id="@+id/favourites_dishOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/favourites"
            android:src="@drawable/heart_empty"
            android:scaleType="centerCrop"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/ingredient">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ingredient_heading"
            android:text="@string/ingredients"
            android:textColor="#171B21"
            android:fontFamily="@font/inter_medium"
            android:textSize="18sp"
            android:textFontWeight="500"
            android:lineHeight="24sp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:id="@+id/ingredient_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/previous_fragment"
            android:src="@drawable/arrow_down" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/full_recipie">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/full_recipie_heading"
            android:text="@string/full_recipe"
            android:textColor="#171B21"
            android:fontFamily="@font/inter_medium"
            android:textSize="18sp"
            android:textFontWeight="500"
            android:lineHeight="24sp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/full_recipie_image"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/previous_fragment"
            android:src="@drawable/arrow_down"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/similar_recipes">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/similar_recipes_heading"
            android:text="@string/similar_recipes"
            android:textColor="#171B21"
            android:fontFamily="@font/inter_medium"
            android:textSize="18sp"
            android:textFontWeight="500"
            android:lineHeight="24sp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/similar_recipes_image"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/previous_fragment"
            android:src="@drawable/arrow_down"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/similar_recipes_rv"
        android:orientation="vertical"
        android:nestedScrollingEnabled="true"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"/>


</LinearLayout>